Fix layout bugs.

--- a/pico.css
+++ b/pico.css
@@ -100,7 +100,7 @@ a {
 	transform: scale(0.9);
 	opacity: 1;
 }
-@media (max-height: 479px) {
+@media (max-height: 539px) {
 	#container {
 		flex-direction: row; -webkit-flex-direction: row;
 	}
@@ -137,7 +137,7 @@ a {
 		}
 	}
 }
-@media (min-height: 480px) {
+@media (min-height: 540px) {
 	#header {
 		width: 95%;
 	}
@@ -154,9 +154,9 @@ a {
 	#logo {
 		margin: 0px 16px;
 	}
-	@media (max-width: 319px) {
+	@media (max-width: 419px) {
 	}
-	@media (min-width: 320px) {
+	@media (min-width: 420px) {
 		.center {
 			position: absolute;
 			left: 50%; transform: translate(-50%, 0);
@@ -176,7 +176,7 @@ a {
 				width: 100%;
 			}
 			#widescreen {
-				height: 100%;
+				height: 90%;
 			}
 		}
 	}
@@ -186,7 +186,7 @@ a {
 		width: 100%;
 	}
 	#widescreen {
-		width: 140%;
+		width: 130%;
 	}
 }
 @media (prefers-color-scheme: dark) {
